CSS/style.css
/* ... */
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    background-color: var(--bg-main);
}

nav {
    display: flex;
    justify-content: right;
    align-items: center;
    padding: 4px 5px;
    height: 65px;
}

nav a {
    display: inline-block;
    text-decoration: none;
    color: var(--text-primary);
    padding: 8px;
}

nav .menu {
    width: 40px;
    height: 40px;
    border-radius: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-right: 3px;
    padding: 8px;
}

nav .menu svg {
    width: 35px;
    height: 35px;
    fill: var(--svg-color);
    cursor: pointer;
}

nav .menu:hover {
    background-color: var(--menu-hover-bg);
}

nav .dropdown_menu_container {
    display: none;
    position: absolute;
    top: 65px;
    right: 35px;
    background-color: var(--bg-dropdown-menu-container);
    border: 1px var(--border-dropdown-menu-container) solid;
    border-radius: 30px;
    padding: 10px 2px 10px 10px;
    z-index: 3;
    text-align: center;
    overflow-y: auto;
    max-width: 350px;
    max-height: 550px;
}

nav .dropdown_menu_1_container {
    margin-bottom: 5px;
}

nav .dropdown_menu_1_container, nav .dropdown_menu_2_container {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    background-color: var(--bg-dropdown-menu-1-2-container);
    padding-top: 30px;
}

nav .dropdown_menu_1_container {
    border-radius: 25px 25px 5px 5px;
}

nav .dropdown_menu_2_container {
    border-radius: 5px 5px 25px 25px;
}

nav .dropdown_menu_container::-webkit-scrollbar {
    width: 6px;
}

nav .dropdown_menu_container::-webkit-scrollbar-track {
    background: transparent; 
    border-radius: 10px;
    margin-top: 25px;
    margin-bottom: 25px;
}

nav .dropdown_menu_container::-webkit-scrollbar-thumb {
    background-color: var(--bg-webkit-scrollbar-thumb);
    border-radius: 10px;
}

nav .dropdown_menu_container::-webkit-scrollbar-thumb:hover {
    background-color: var(--webkit-scrollbar-thumb-hover-color);
}

nav .apps {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 0px 10px 20px 10px;
    padding: 10px 5px;
    height: 88px;
    width: 90px;
    cursor: pointer;
}

nav .apps>p {
    width: 100%;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    text-align: center;
}

nav .apps:hover {
    background-color: var(--apps-hover-bg);
    border-radius: 20px;
    min-height: 88px;
    height: auto;
}

nav .apps:hover>p {
    overflow: visible;
    white-space: normal;
}

nav .apps>img {
    height: 35px;
    width: 35px;
    margin-bottom: 15px;
    border-radius: 0;
}

nav .dropdown_menu_container p>a {
    text-decoration: none;
    color: var(--text-dropdown-menu-container);
}

nav .dropdown_menu_container button {
    color: var(--text-dropdown-menu-container);
    padding: 12px 15px;
    border: 1px var(--border-dropdown-menu-container-button) solid;
    border-radius: 20px;
    background-color: var(--bg-dropdown-menu-container-button);
    margin: 20px 0px 12px 0px;
    cursor: pointer;
}

nav .dropdown_menu_container button:hover {
    border: 1px var(--border-dropdown-menu-container-button-hover) solid;
    background-color: var(--dropdown-menu-container-button-hover-bg);
    box-shadow: none;
    cursor: pointer;
}

nav button {
    color: var(--text-secondary);
    padding: 12px 15px;
    border: 1px transparent solid;
    border-radius: 20px;
    background-color: var(--bg-nav-button);
    cursor: pointer;
}

nav button:hover {
    background-color: var(--nav-button-hover-bg);
    box-shadow: var(--shadow-nav-button-hover);
}

nav img {
    width: 30px;
    border-radius: 100%;
}

nav>a:hover {
    text-decoration: underline;
}

header {
    display: flex;
    justify-content: center;
    width: 100%;
    height: 30%;
}

header img {
    height: 120px;
    margin-top: 20px;
}

main {
    margin: 0px auto;
    margin-top: 15px;
    flex-grow: 1;
    width: 100%;
    height: 60%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

main form {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    height: auto;
}

main form .search_bar {
    display: flex;
    border: 1px var(--border-search_bar) solid;
    background-color: var(--bg-search-bar, transparent);
    width: 688px;
    height: 50px;
    max-width: 90%;
    border-radius: 50px;
    margin-top: 20px;
    box-shadow: var(--shadow-search-bar);
}

main form .search_bar img {
    margin-top: 18px;
    margin-left: 15.5px;
    height: 13px;
    width: 13px;
}

main form .search_bar input {
    border: none;
    outline: none;
    height: 48px;
    flex-grow: 1;
    margin-left: 7px;
    padding: 5px 5px;
    border-radius: 50px;
    font-size: 1.5rem;
    background-color: transparent;
    color: var(--text-primary);
}

.keyboard_icon {
    width: 28px;
    height: 22px;
    fill: var(--svg-color);
    margin: 13px 7px;
    cursor: pointer;
}

.note_1_container {
    position: relative;
    display: inline-block;
    z-index: 1;
}

.note_1_container:hover .note_1_triangle,
.note_1_container:hover .note_1 {
    display: block;
}

.note_1_triangle {
    display: none;
    width: 0;
    height: 0;
    border-left: 6px solid transparent;
    border-right: 6px solid transparent;
    border-bottom: 6px solid var(--tooltip-bg);
    margin-top: 10px;
    margin-left: 10px;
    position: absolute;
    top: 26px;
    left: 5.5px;
    z-index: 2;
}

.note_1 {
    display: none;
    font-size: 10px;
    font-weight: bold;
    color: var(--tooltip-text);
    width: 80px;
    height: auto;
    background-color: var(--tooltip-bg);
    position: absolute;
    padding: 5px 5px;
    top: 41px;
    left: -20px;
    z-index: 2;
}

.english_page .keyboard_icon,
.france_page .keyboard_icon,
.chinese_page .keyboard_icon {
    display: none;
}

.note_2_container {
    position: relative;
    display: inline-block;
    z-index: 1;
}
/* ... */

